src/styles.css
/* You can add global styles to this file, and also import other style files */
html {
  font-size: 16px;
}

/* progress bar at top */
.ng-progress-bar {
  margin-top: 50px;
}
.ng-spinner {
  margin-top: 50px;
}

.ng-meteor {
  box-shadow: 10px 0px 5px black !important;
}

/* tab */
.tab {
  margin-top: 30px;
}
.tab-item {
  font-size: 16px;
}
.icon-btn > i {
  padding-right: 8px;
}
.hint-link:hover,
.hint-link:visited,
.hint-link:link,
.hint-link:active {
  text-decoration: none;
}

/* label color for validation error*/
.control-label.required:after {
  color: #d00;
  content: "*";
  position: absolute;
  margin-left: 5px;
  top: 7px;
}

/* code editor*/
#editor1,
#editor2,
#editor3 {
  height: 400px;
}
.editor-container {
  border: 1px solid #ddd;
}
._nghost-c4 {
  height: 600px;
}


pre.ql-syntax {
  background-color: #f5f5f5 !important;
  color: inherit !important;
  display: block;
  padding: 9.5px;
  margin: 0 0 10px;
  font-size: 13px;
  line-height: 1.42857143;
  word-break: break-all;
  word-wrap: break-word;
  border: 1px solid #ccc;
  border-radius: 4px;
}

.ql-editor {
  font-size: 14px !important;
}

